Blackpurl/src/objects/Part_FIFO_Bucket__c.object
<CustomObject>
    <fields>
        <fullName>AccountingId__c</fullName>
        <label>AccountingId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountingResponse__c</fullName>
        <label>AccountingResponse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( Remaining_Qty__c &lt; 0, 0, IF(Remaining_Qty__c = 0, FLOOR(LastModifiedDate - CreatedDate),   FLOOR(NOW() - CreatedDate) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Cost_When_Created__c</fullName>
        <label>Average Cost When Created</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Return__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Return</label>
        <referenceTo>CO_Invoice_Header__c</referenceTo>
        <relationshipLabel>Part FIFO Buckets</relationshipLabel>
        <relationshipName>Part_FIFO_Buckets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_FIFO_Bucket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is FIFO Bucket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Adjust_Number__c</fullName>
        <label>Part Adjust Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Part FIFO Buckets</relationshipLabel>
        <relationshipName>Part_FIFO_Buckets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty_In_Stock_When_Created__c</fullName>
        <label>Qty In Stock When Created</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_In__c</fullName>
        <label>Qty In</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_Out__c</fullName>
        <label>Qty Out</label>
        <summarizedField>Part_FIFO_Bucket_Activity_Line_Item__c.Qty_Out__c</summarizedField>
        <summaryForeignKey>Part_FIFO_Bucket_Activity_Line_Item__c.Part_FIFO_Bucket__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Qty__c</fullName>
        <formula>Qty_In__c -  Qty_Out__c</formula>
        <label>Remaining Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Count__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Count</label>
        <referenceTo>Stock_Count__c</referenceTo>
        <relationshipLabel>Part FIFO Buckets</relationshipLabel>
        <relationshipName>Part_FIFO_Buckets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SyncToken__c</fullName>
        <label>SyncToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Cost__c  *  Remaining_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Part</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <formula>if(LEN(TEXT(Part_Adjust_Number__c)) == 5, &apos;PA-&apos; &amp;  TEXT(Part_Adjust_Number__c),
  if(LEN(TEXT(Part_Adjust_Number__c)) == 4, &apos;PA-0&apos; &amp;  TEXT(Part_Adjust_Number__c),
  if(LEN(TEXT(Part_Adjust_Number__c)) == 3, &apos;PA-00&apos; &amp;  TEXT(Part_Adjust_Number__c),
  if(LEN(TEXT(Part_Adjust_Number__c)) == 2, &apos;PA-000&apos; &amp;  TEXT(Part_Adjust_Number__c),
  if(LEN(TEXT(Part_Adjust_Number__c)) == 1, &apos;PA-0000&apos; &amp;  TEXT(Part_Adjust_Number__c),&apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VRCost__c</fullName>
        <label>VRCost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <formula>if(!ISBLANK(Cost__c)&amp;&amp; !ISBLANK(VRCost__c), VRCost__c - Cost__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoicing_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Invoicing Header</label>
        <referenceTo>Vendor_Invoicing_Header__c</referenceTo>
        <relationshipLabel>Part FIFO Buckets</relationshipLabel>
        <relationshipName>Part_FIFO_Buckets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Receiving_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Receiving Header</label>
        <referenceTo>Vendor_Receiving_Header__c</referenceTo>
        <relationshipLabel>Part FIFO Buckets</relationshipLabel>
        <relationshipName>Part_FIFO_Buckets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountingLastSyncTime__c</fullName>
        <label>accountingLastSyncTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>availForQBSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>availForQBSync</label>
        <type>Checkbox</type>
    </fields>
    <label>Part FIFO Bucket</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer_Return__c</columns>
        <columns>Part_Adjust_Number__c</columns>
        <columns>Reference__c</columns>
        <columns>Source_Name__c</columns>
        <columns>Stock_Count__c</columns>
        <columns>Unique_Id__c</columns>
        <columns>Variance__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Async_QB_Part_FIFO</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>availForQBSync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async QB Part FIFO</label>
    </listViews>
    <nameField>
        <displayFormat>PBN-{00000000}</displayFormat>
        <label>Part FIFO Bucket  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part FIFO Buckets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>